1998-02-13  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (macros.dep): New maintainer rule for handling
	automatic rebuilding of aclocal.m4 if any of the macros change.
	(MACROS): New variable.  List of all `m4' macros in this
	directory.

1998-02-12  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-support.m4: New file.  Defines GNOME_SUPPORT_CHECKS for
	libsupport.a support.

1998-02-10  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome.m4: New file.  Moved AC_CHECK_GNOME from `configure.in' to
	here, and renamed macro to GNOME_CHECK_GNOME.
	* gnome-x-checks.m4: Likewise, move and renaming AC_GNOME_X_CHECKS 
	to GNOME_X_CHECKS.
	
	* aclocal-include.m4: New file.  Defines AM_ACLOCAL_INCLUDE macro
	to provide extra search directories to `aclocal'.